Fixed some PMD issues (#87)
* Fixed some PMD issues